# ocaml-ebooklib

./: LICENSE  dune-project  ebooklib.opam
lib/: dune  ebooklib.ml
test/: dune
