(lang dune 3.0)

(name ebooklib)

(generate_opam_files true)

(source
 (github tomob/ocaml-ebooklib))

(authors "Tomasz Barański")

(maintainers "Tomasz Barański")

(license BSD-2-Clause)

; (documentation https://url/to/documentation)

(package
 (name ebooklib)
 (synopsis "ebooklib is an Ocaml library for managing epub files")
 (description "A longer description")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
